--- a/css/resume.css
+++ b/css/resume.css
@@ -48,6 +48,11 @@ p.lead {
   font-size: 1.5rem;
 }
 
+.subheading img {
+  max-width: 450px;
+  height: auto;
+}
+
 .social-icons a {
   display: inline-block;
   height: 3.5rem;
